added docs to notebook

--- a/notebooks/python_api_examples.ipynb
+++ b/notebooks/python_api_examples.ipynb
@@ -1,17 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Some boilerplate code to make the notebook work\n",
-    "import os\n",
-    "import sys\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n"
+    "# Using the NeuronBridge Python API\n",
+    "\n",
+    "This notebook demonstrates how to use the NeuronBridge Python API."
    ]
   },
   {
@@ -20,7 +15,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import and initialize the NeuronBridge client\n",
+    "# Some boilerplate code to make the notebook work\n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize the NeuronBridge client\n",
+    "\n",
+    "This queries the NeuronBridge API to find the latest version and downloads the dynamic configuration. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from neuronbridge import client\n",
     "from neuronbridge.model import *\n",
     "from typing import *\n",
@@ -28,8 +45,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve the EM image for a given EM body id"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +70,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=1210x566>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,8 +82,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve the LM image for a given FlyLight line name"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +107,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=1210x566>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,8 +120,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve matches for the EM body id\n",
+    "\n",
+    "This retrieves both CDS and PPPM matches for the EM body id, and sorts them by score."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,26 +156,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Intersection of CDS and PPPM matches"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['VT043078',\n",
-       " 'R23H04',\n",
-       " 'VT029741',\n",
-       " 'VT041832',\n",
-       " 'R22D03',\n",
-       " 'VT059224',\n",
-       " 'VT059225',\n",
-       " 'VT028317',\n",
+       "['VT002226',\n",
+       " 'VT004979',\n",
        " 'R52H12',\n",
-       " 'VT039518']"
+       " 'VT043078',\n",
+       " 'R60H02',\n",
+       " 'VT008691',\n",
+       " 'VT029514',\n",
+       " 'VT002033',\n",
+       " 'R17B08',\n",
+       " 'R74B08']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,24 +192,43 @@
     "ppp_names = utils.get_published_name_set(ppp_matches)\n",
     "\n",
     "common = cds_names.intersection(ppp_names)\n",
-    "list(common)[:10]\n"
+    "list(common)[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get ranks of lines found by both CDS and PPPM\n",
+    "\n",
+    "We sort the common lines and retrieve their ranks in both CDS and PPPM results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "published_names = sorted(list(common))\n",
     "\n",
     "cds_ranks = utils.get_ranks(cds_matches, published_names)\n",
-    "ppp_ranks = utils.get_ranks(ppp_matches, published_names)\n"
+    "ppp_ranks = utils.get_ranks(ppp_matches, published_names)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create DataFrame \n",
+    "\n",
+    "The common lines are sorted by the mean rank of the line."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +630,7 @@
        "37  VT041884      3115        38"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -736,8 +802,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overlay of EM and LM images\n",
+    "\n",
+    "Some basic image processing using PIL to flatten and overlay the EM and LM images and show the 2D region in common. \n",
+    "\n",
+    "This could be improved by taking color depth into account when determining overlap. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -786,18 +863,6 @@
     "image = obj.enhance(2)\n",
     "display(image)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
