--- a/notebooks/python_api_examples.ipynb
+++ b/notebooks/python_api_examples.ipynb
@@ -870,7 +870,7 @@
    "hash": "8547760dec62eaeedb786db1847836ca23bb76d48006f6a7b0af538a16064005"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('neuronbridge-python')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -885,8 +885,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
