--- a/notebooks/neuronbridge_direct_access.ipynb
+++ b/notebooks/neuronbridge_direct_access.ipynb
@@ -2941,9 +2941,9 @@
     "    mirrored: bool\n",
     "        \n",
     "class Files(BaseModel):\n",
-    "    CDM: str\n",
+    "    ColorDepthMip: str\n",
     "    SignalMipMaskedSkel: str\n",
-    "    CDMSkel: str\n",
+    "    ColorDepthMipSkel: str\n",
     "    SignalMip: str\n",
     "    SignalMipMasked: str\n",
     "\n",
