--- a/notebooks/python_api_examples.ipynb
+++ b/notebooks/python_api_examples.ipynb
@@ -8,15 +8,16 @@
     "\n",
     "This notebook demonstrates how to use the NeuronBridge Python API.\n",
     "\n",
-    "Before running this notebook, you will need to add some additional libraries to your virtual environment:\n",
+    "Please use the \"notebooks\" Pixi env to run this notebook. To get the interpreter path, you can run:\n",
     "```\n",
-    "uv pip install pandas pillow blend-modes\n",
+    "pixi shell -e notebooks\n",
+    "which python\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +32,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Initialize the NeuronBridge client\n",
     "\n",
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +127,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=1210x566>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +165,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=1210x566>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -216,25 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['VT029514',\n",
-       " 'VT058383',\n",
+       "['R52C05',\n",
+       " 'VT041884',\n",
        " 'R51H04',\n",
-       " 'VT002226',\n",
-       " 'VT025938',\n",
-       " 'VT008691',\n",
-       " 'VT004979',\n",
-       " 'R17B08',\n",
+       " 'VT043690',\n",
        " 'VT063305',\n",
-       " 'VT010264']"
+       " 'VT010264',\n",
+       " 'R22D03',\n",
+       " 'VT014200',\n",
+       " 'VT043138',\n",
+       " 'R19A04']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +688,7 @@
        "37  VT041884      5092        38"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +977,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "notebooks",
    "language": "python",
    "name": "python3"
   },
@@ -985,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
